--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "lib": ["es6"],
         "module": "commonjs",
         "target": "es6",
         "preserveConstEnums": true,
